# chatbot

./: Cargo.toml  README.md
chatbot-lib/: Cargo.toml
chatbot-lib/src/: chat_bot.rs  lib.rs
chatbot-lib/src/command/: command_processor.rs  error.rs  from_argument.rs  mod.rs  split.rs  subcommand.rs
chatbot-lib/src/request/: command_request.rs  filter_request.rs  from_command_request.rs  mod.rs
chatbot-lib/src/response/: command_response.rs  into_response.rs  mod.rs
chatbot-lib/src/state/: channel_state.rs  chatters.rs  mod.rs  persisted_state.rs
chatbot-lib/src/user/: mod.rs  user_argument.rs
chatbot-macro/: Cargo.toml
chatbot-macro/src/: lib.rs  meta.rs  pattern.rs  rev_on.rs  token.rs
chatbot-macro/tests/: test.rs
