[package]
name = "chatbot-lib"
version.workspace = true
license.workspace = true
authors = ["Nya"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = "0.6.0"
humantime = "2.1"
chrono = "0.4"
http = "1.2.0"
url = "2.5"
derive_more = {version = "2.0.1", default-features = false, features = ["from", "deref"]}
twitch-irc = "5.0.1"
futures-io = "0.3"
async-trait = "0.1.87"
tokio = { version = "1.44", features = ["sync", "fs", "rt"] }
serde = "1.0"
arc-swap = "1.7"
ron = "0.8"
anyhow = "1.0"
log = "0.4"
itertools = "0.14.0"
dashmap = "6.1.0"
rand = "0.9.0"
uuid = "1.15.1"
