[package]
name = "chatbot-macro"
version.workspace = true
license.workspace = true
authors = ["Nya"]
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
chatbot-lib = { path = "../chatbot-lib" }
indexmap = "2.8.0"
url = "2.5.4"
proc-macro2 = "1.0"

[dev-dependencies]
anyhow = "1.0"
